--- a/frontend/src/components/LandingPage.css
+++ b/frontend/src/components/LandingPage.css
@@ -1,4 +1,4 @@
-.logo
+.logoLand
 {
     display: block;
     margin-left: auto;
@@ -8,7 +8,7 @@
     padding: 50px;
     padding-top: 180px;
 }
-.container{
+.Landing{
     background-color: #B3DEE5;
     height: 100vh;
 }
@@ -17,24 +17,25 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    /* height: 200px; */
    
 }
-.btn{
+.btnLand{
     background-color: #FFA101;
     padding: 20px;
     padding-left: 80px;
     padding-right: 80px;
-    margin: 87px;
+    margin: 0 87px;
     border: 4px solid #31525B;
     border-radius: 20px;
     font-size: 150%;
     font-weight: bold;
+    cursor: pointer;
 }
 .tagLine{
     margin-left: 33%;
     margin-right: 12%;
-    margin-top: 65px;
+    margin-top: 41px;
     margin-bottom: 50px;
 }
 
